Hub details query optimization